fixing mobile ui and css, fixed that damn bottom bar bug on mobile

--- a/src/components/OurStory/OurStory.module.css
+++ b/src/components/OurStory/OurStory.module.css
@@ -1,23 +1,29 @@
+.OurStory{
+    overflow: hidden;
+}
 .OurStory div{
     margin: 0 auto;
 }
-.image1{
+.OurStory .image1{
     background-image: url(../../assets/cracowimage.jpg);
-    height: 600px;
-    width: 1000px;
+    height: 500px;
+    width: 100vw;
     margin-top: 50px;
     background-size: cover;
+    background-position: -90px 0;
     background-repeat: no-repeat;
 }
 .image2{
     background-image: url(../../assets/chef.jpg);
     height: 500px;
-    width: 750px;
+    width: 100vw;
     position: relative;
+    margin: 0;
+    left: 0;
+    transform: none;
     top: -25px;
     background-size: cover;
     background-repeat: no-repeat;
-    transform: translateX(50%);
 }
 .OurStory .wideBar{
     margin-top: 100px;
@@ -33,8 +39,9 @@
     color: white;
     margin-left: 30%;
 }
-.text .quote{
-    width: 49%;
+
+.quote{
+    width: 80%;
     height: 100%;
     position: absolute;
     text-align: center;
@@ -42,28 +49,20 @@
     box-sizing: border-box;
     display: block;
 }
-.text .quote h2{
+.quote h2{
     color: white;
     letter-spacing: 3px;
     font-size: 50px;
     z-index: 3;
 }
-.text .quote .quoteChef{
+.quote .quoteChef{
     font-family: 'Lora', serif;
     margin-top: 50px;
     margin-left: 0;
     position: relative;
     font-size: 25px;
 }
-.text{
-    position: absolute;
-    top: 72.5%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 40px;
-    text-align: center;
-}
-.text h2{
+.OurStory h2{
     color: rgb(220, 55, 39);
     font-family: 'Merriweather', serif;
     font-weight: 400;
@@ -72,22 +71,21 @@
     text-align: center;
     letter-spacing: 2px;
 }
-.text h3{
+.OurStory h3{
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     font-size: 24px;
 
 }
-.move{
+.OurStoryText{
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left: auto;
-    transform: translateX(-50%);
-    width: 50%;
+    margin-left: 10%;
+    width: 80%;
     text-align: justify;
 }
-.text p{
+.OurStory p{
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
 }
@@ -96,6 +94,11 @@
     animation: scrollAni 1.5s linear infinite;
     position: relative;
     opacity: 0;
+        top: 72.5%;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 40px;
+        text-align: center;
 }
 .bar{
     margin-top: 50px;
@@ -111,4 +114,66 @@ h2.owner{
     10%  {opacity: 1;}
     90%  {opacity: 1;}
     100% {opacity: 0;top:20px;}
-  }
+}
+
+@media (max-width:400px)
+{
+    
+}
+@media (min-width:480px)
+{
+
+}
+@media (min-width:768px)
+{
+    /* komputery juz */
+    .OurStory{
+        overflow: visible;
+    }
+    .OurStory .image1{
+        background-image: url(../../assets/cracowimage.jpg);
+        height: 600px;
+        width: 1000px;
+        margin-top: 50px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .image2{
+        background-image: url(../../assets/chef.jpg);
+        height: 500px;
+        width: 750px;
+        position: relative;
+        top: -25px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        transform: translateX(50%);
+        display: block;
+    }
+    .text .quote{
+        width: 49%;
+        height: 100%;
+        position: absolute;
+        text-align: center;
+        padding: 20px 40px;
+        box-sizing: border-box;
+        display: block;
+    }
+    .OurStory .wideBar{
+        margin-top: 100px;
+        z-index:-1;
+        position: relative;
+        width: 90vw;
+        height: 450px;
+        background-color: rgb(220, 55, 39);
+        margin-bottom: 80px;
+    }
+}
+@media (min-width:1024px)
+{
+    
+}
+@media (min-width:1200px)
+{
+    
+}
